[package]
name = "reaktor"
version = "0.1.0"
edition = "2024"

[dependencies]
glium = "0.36.0"
egui_glium = "0.31.1"
glutin-winit = "0.5.0"
winit = "0.30.12"
egui="0.31.1"
glam = { version = "0.30.4", default-features = false, features = ["libm"] }
png-decoder = "0.1.1"

serde = { version = "1.0", features = ["derive"] }
calamine = "0.26.1"

rfd = "0.15.4"
