[package]
name = "reaktor"
version = "0.1.0"
edition = "2024"

[dependencies]
miniquad = "0.4.8"
egui-miniquad = "0.16.0"
egui="0.31.1"
glam = { version = "0.30.4", default-features = false, features = ["libm"] }
png-decoder = "0.1.1"

serde = { version = "1.0", features = ["derive"] }
calamine = "0.26.1"

rfd = "0.15.4"

# [patch.crates-io.miniquad]
# version = "0.4.8"
# patch = "miniquad"